--- a/src/App.css
+++ b/src/App.css
@@ -15,21 +15,18 @@ body {
 
 .wallpaper {
     background: url(./images/background.png) center/ cover no-repeat;
-
 }
 
-@media screen and (max-width: 1024px) and (min-width:600px) {
+@media  (max-width: 1024px) and (min-width:600px) {
 
     .wallpaper {
         background: url(./images/Tablet.png) center/ cover no-repeat;
-
     }
 }
 
-@media screen and (max-width: 600px) and (min-width:320px) {
+@media (max-width: 600px) and (min-width:320px) {
 
     .wallpaper {
         background: url(./images/Mobile.png) center/ cover no-repeat;
-
     }
 }
