--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -9,6 +9,7 @@
   justify-content: space-between;
   width: 75%;
   margin: 0 auto;
+  padding: 5% 0;
 }
 
 @media screen and (max-width: 1024px) and (min-width:600px) {
@@ -18,7 +19,7 @@
     justify-content: space-between;
     width: 75%;
     margin: 0 auto;
-    padding: 0 5% 0 0;
+    padding: 5% 0;
   }
 }
 
@@ -26,7 +27,8 @@
   .columns {
     display: block;
     justify-content: space-between;
-    width: 80%;
+    width: 75%;
     margin: 0 auto;
+    padding: 10% 0;
   }
 }
