--- a/src/components/Form/SpecialInputs.css
+++ b/src/components/Form/SpecialInputs.css
@@ -68,10 +68,22 @@
 .MuiOutlinedInput-inputMultiline:hover {
     border: none !important;
 }
+#floatingTextarea2{
+    background-color: #EEF3FC !important;
+    color: #8792A7 !important;
+    height: 200px;
+    margin: 3% 0;
+    width: 100% !important;
+}
 
+label{
+    color: #8792A7 !important; 
+    font-family: 'Montserrat', sans-serif !important;
+    font-size: 14px !important;
+}
 @media screen and (max-width: 600px) and (min-width:300px) {
     .inputs {
-        margin: 5% 0 !important;
+        margin: 3% 0 !important;
     }
 
     .phoneInputContainer {
