--- a/src/components/FormContact/FormContact.module.css
+++ b/src/components/FormContact/FormContact.module.css
@@ -3,7 +3,7 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    margin: 12% 0;
+    margin: 12% auto;
     padding: 5% 0;
 }
 
@@ -25,7 +25,7 @@ span {
         display: flex;
         flex-direction: column;
         margin: 12% 0;
-        padding: 2% 0;
+        padding: 8% 0;
     }
 
     .container h1 {
